# islamic_book_processor

./: .gitignore  DEVIN_PROMPT.md  README.md  pyproject.toml
docs/: 00_CONTEXT.md  01_REQUIREMENTS.md  02_DATASETS.md  03_HEADING_ENGINE_SPEC.md  04_ACCEPTANCE.md  05_SECURITY.md  SPEC.md
fixtures/manifests/: manifest.json  pattern_stats.json
fixtures/shamela_exports/BK001_shadha_al_urf/: meta.json
fixtures/shamela_exports/BK002_lisan_al_arab/: meta.json
fixtures/shamela_exports/BK003_taj_al_arus/: meta.json
fixtures/shamela_exports/BK004_sharh_ibn_aqil/: meta.json
fixtures/shamela_exports/BK005_al_muwafaqat/: meta.json
fixtures/shamela_exports/BK006_al_jadwal_i3rab_al_quran/: meta.json
fixtures/shamela_exports/BK007_al_mughni_ibn_qudama_turki/: meta.json
fixtures/shamela_exports/BK008_tafsir_ibn_kathir_salama/: meta.json
fixtures/shamela_exports/BK009_siyar_a3lam_al_nubala_hadith/: meta.json
fixtures/shamela_exports/BK010_fath_al_bari_bukhari_salafiyya/: meta.json
src/ibp/: __init__.py  __main__.py  approval.py  cli.py  config.py  headings.py  ingest.py  logging.py  models.py  plans.py  run_context.py  utils.py
src/ibp/bookcatcher/: scan.py
tests/: test_apply.py  test_cli.py  test_cli_help.py  test_llm_verifier.py  test_placement_engine.py  test_registry_service.py  test_run_id_layout.py  test_windows_safe_paths.py
tools/: check_secrets.py  compute_pattern_stats.py  generate_manifest.py  split_gold.py  validate_gold.py
training/gold_snippets/: README.md  heading_candidates_v2.jsonl  heading_candidates_v2.stats.json  heading_candidates_v3.jsonl  heading_candidates_v3.stats.json  heading_gold_v3.cleaned.jsonl  heading_gold_v3.jsonl  must_not_heading.jsonl
(+145 files in other folders)
