[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibp"
version = "0.1.0"
description = "Islamic Book Processor CLI"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ibp = "ibp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
