[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "islamic-book-processor"
version = "0.1.0"
description = "High-assurance review-gated processing for Islamic books"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ibp = "ibp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
